--- a/travelshare_api/config/config.json
+++ b/travelshare_api/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
     "username": "postgres",
-    "password": "password",
+    "password": "travelshare",
     "database": "travelshare",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
+    "username": "postgres",
+    "password": "travelshare",
+    "database": "test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
@@ -18,6 +18,6 @@
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   }
 }
