--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "postgres",
     "database": "travelshare",
     "host": "localhost",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "username": "postgres",
