--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -2,12 +2,14 @@ name: Tests
 on: push
 
 jobs:
-  # Label of the runner job
-  runner-job:
-    # You must use a Linux environment when using service containers or container jobs
+  # Label of the container job
+  container-job:
+    # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
+    # Docker Hub image that `container-job` executes in
+    container: node:10.18-jessie
 
-    # Service containers to run with `runner-job`
+    # Service containers to run with `container-job`
     services:
       # Label used to access the service container
       postgres:
@@ -19,9 +21,12 @@ jobs:
           DATABASE_HOST: 127.0.0.1
           POSTGRES_USER: postgres
           POSTGRES_DB: travelshare
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       # Downloads a copy of the code in your repository before running CI tests
