--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: PostgreSQL service example
 on: push
 
 jobs:
@@ -18,9 +18,6 @@ jobs:
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
-          DATABASE_HOST: 127.0.0.1
-          POSTGRES_USER: postgres
-          POSTGRES_DB: travelshare
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -39,6 +36,12 @@ jobs:
         run: npm ci
 
       - name: Connect to PostgreSQL
-        run: /bin/bash script.sh  
-      -name : Test
-        run: npm run test
+        # Runs a script that creates a PostgreSQL table, populates
+        # the table with data, and then retrieves the data.
+        run: node client.js
+        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
+        env:
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: postgres
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432
