--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -36,11 +36,9 @@ jobs:
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
         run: npm ci
-
-      - name: Connect to PostgreSQL
-        # Runs a script that creates a PostgreSQL table, populates
-        # the table with data, and then retrieves the data.
-        run: /bin/bash script.sh
-        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
+      - name: Change password for postgres
+        run: psql -c "ALTER USER postgres WITH ENCRYPTED PASSWORD 'postgres';"
+      - name: Create Database
+        run: psql -c "CREATE DATABASE travelshare;"
       - name: Perform tests
         run: npm run test
