--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -36,6 +36,8 @@ jobs:
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
         run: npm ci
+      - name: Install postgres client
+        run: apt-get install --yes --no-install-recommends postgresql-client
       - name: Change password for postgres
         run: psql -c "ALTER USER postgres WITH ENCRYPTED PASSWORD 'postgres';"
       - name: Create Database
