--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -37,7 +37,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install postgres client
-        run: apt-get update & apt-get install --yes --no-install-recommends postgresql-client
+        run: |
+          apt-get update
+          apt-get install --yes postgresql-client
       - name: Change password for postgres
         run: psql -c "ALTER USER postgres WITH ENCRYPTED PASSWORD 'postgres';"
       - name: Create Database
