--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -1,40 +1,40 @@
-name: PostgreSQL service example
-on: push
+name: Running Tests
+
+on: [push]
 
 jobs:
-  # Label of the container job
-  container-job:
-    # Containers must run in Linux based operating systems
+  Test:
     runs-on: ubuntu-latest
-    # Docker Hub image that `container-job` executes in
-    container: node:10.18-jessie
 
-    # Service containers to run with `container-job`
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image
         image: postgres
-        # Provide the password for postgres
+
         env:
           POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
           POSTGRES_DB: travelshare
-          DATABASE_HOST: 127.0.0.1
-        # Set health checks to wait until postgres has started
+
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
-      # Downloads a copy of the code in your repository before running CI tests
-      - name: Check out repository code
-        uses: actions/checkout@v3
+      # run steps required in the workflow
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      # Performs a clean installation of all dependencies in the `package.json` file
-      # For more information, see https://docs.npmjs.com/cli/ci.html
+      - name: Set up Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
       - name: Install dependencies
-        run: npm ci
-      - name: Perform tests
+        run: npm install
+
+      - name: Test
         run: npm run test
