--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,27 @@
 language: node_js
 services:
   - postgresql
+addons:
+  postgresql: "12"
+  apt:
+    packages:
+      - postgresql-12
+      - postgresql-client-12
 env:
   global:
     - PGPORT=5432
-    - DB_NAME=travelshare
+    - DB_NAME=travelsare
     - DB_USER=postgres
     - DB_PASSWORD=postgres
 before_script:
-  - psql -c 'create database travelshare;' -U postgres
+  - psql --command="CREATE DATABASE travelshare;"
 install:
   - npm install
 cache:
   directories:
     - "node_modules"
+jobs:
+  include:
+    - stage: test
+      script:
+        - npm run test
