--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
     - DB_NAME=travelsare
     - DB_USER=postgres
     - DB_PASSWORD=postgres
+    - PGDATA="/var/lib/postgresql/data"
+
 before_script:
   - pg_ctl start
   - psql --command="CREATE DATABASE travelshare;"
