--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
     - PGDATA="/var/lib/postgresql/data"
 
 before_script:
+  - mkdir -p /var/lib/postgresql/data
   - pg_ctl start
   - psql --command="CREATE DATABASE travelshare;"
 install:
