--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ env:
 
 before_script:
   - sudo mkdir -p /var/lib/postgresql/data
+  - sudo chown -R postgres:postgres /var/lib/postgresql/data
+  - sudo chmod -R 0700 /var/lib/postgresql/data
   - initdb
   - pg_ctl start
   - psql --command="CREATE DATABASE travelshare;"
