--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ before_script:
   - sudo mkdir -p /var/lib/postgresql/data
   - sudo chown -R postgres:postgres /var/lib/postgresql/data
   - sudo chmod -R 0700 /var/lib/postgresql/data
-  - sudo initdb
-  - pg_ctl start
+  - sudo service postgresql start
   - psql --command="CREATE DATABASE travelshare;"
 install:
   - npm install
