--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - sudo mkdir -p /var/lib/postgresql/data
   - sudo chown -R postgres:postgres /var/lib/postgresql/data
   - sudo chmod -R 777 /var/lib/postgresql/data
+  - echo "" | su postgres
   - initdb
   - pg_ctl start
   - psql --command="CREATE DATABASE travelshare;"
