--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ env:
 
 before_script:
   - sudo mkdir -p /var/lib/postgresql/data
-  - initdb
-  - pg_ctl start
+  - sudo initdb
+  - sudo pg_ctl start
   - psql --command="CREATE DATABASE travelshare;"
 install:
   - npm install
