--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,8 @@ env:
 
 before_script:
   - addgroup -S postgres && adduser -S postgres -G postgres || true
-  - chown -R postgres:postgres /run/postgresql/
   - sudo mkdir -p /var/lib/postgresql/data
-  - chown -R postgres:postgres /var/lib/postgresql/data
+  - sudo chown -R postgres:postgres /var/lib/postgresql/data
   - su postgres
   - initdb
   - pg_ctl start
