--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,7 @@ env:
     - PGDATA="/var/lib/postgresql/data"
 
 before_script:
-  - addgroup -S postgres && adduser -S postgres -G postgres || true
-  - sudo mkdir -p /var/lib/postgresql/data
-  - sudo chown -R postgres:postgres /var/lib/postgresql/data
-  - su postgres
-  - initdb
-  - pg_ctl start
-  - psql --command="CREATE DATABASE travelshare;"
+  - psql -c 'create database travelshare;' -U postgres
 install:
   - npm install
 jobs:
