--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ node_js:
 services:
   - postgresql
 addons:
-  postgresql: "14"
+  postgresql: "12"
   apt:
     packages:
-      - postgresql-14
-      - postgresql-client-14
+      - postgresql-12
+      - postgresql-client-12
 env:
   global:
     - PGPORT=5432
@@ -17,15 +17,16 @@ env:
     - DB_PASSWORD=postgres
     - PGDATA="/var/lib/postgresql/data"
 
-# before_script:
-#   - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
-#   - sudo service postgresql restart
-#   - sleep 1
-#   - postgres --version
-script:
-  - psql -c 'create database travelshare;' -U postgres
+before_script:
+  - addgroup -S postgres && adduser -S postgres -G postgres || true
+  - sudo mkdir -p /var/lib/postgresql/data
+  - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
+script:
+  - initdb
+  - pg_ctl start
+  - psql -c 'create database travelshare;' -U postgres
 jobs:
   include:
     - stage: test
