--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ env:
     - PGDATA="/var/lib/postgresql/data"
 
 before_script:
-  - addgroup -S postgres && adduser -S postgres -G postgres || true
+  # - addgroup -S postgres && adduser -S postgres -G postgres || true
   - sudo mkdir -p /var/lib/postgresql/data
-  - sudo chown -R postgres:postgres /var/lib/postgresql/data
+  # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
 jobs:
@@ -29,5 +29,5 @@ jobs:
       script:
         - initdb
         - pg_ctl start
-        - psql -c 'create database travelshare;' -U postgres
+        - psql -c 'create database travelshare;'
         - npm run test
