--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
       - postgresql-client-12
 env:
   global:
-    - PGPORT=5432
     - DB_NAME=travelsare
     - DB_USER=postgres
     - DB_PASSWORD=postgres
@@ -20,6 +19,7 @@ env:
 before_script:
   # - addgroup -S postgres && adduser -S postgres -G postgres || true
   - sudo mkdir -p /var/lib/postgresql/data
+  - psql -c 'create database travelshare;' -U postgres -p 5433
   # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
@@ -27,7 +27,7 @@ jobs:
   include:
     - stage: test
       script:
-        - initdb
-        - pg_ctl start
-        - psql -c 'create database travelshare;'
+        # - initdb
+        # - pg_ctl start
+        # - psql -c 'create database travelshare;'
         - npm run test
