--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
 before_script:
   # - addgroup -S postgres && adduser -S postgres -G postgres || true
   - sudo mkdir -p /var/lib/postgresql/data
-  - psql -c 'create database travelshare;' -U postgres -p 5433
+  - PGPASSWORD="" psql -c 'create database travelshare;' -U postgres -p 5433
   # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
