Modificando fichero travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ addons:
       - postgresql-client-12
 env:
   global:
-    - PGPASSWORD=''
-    - DB_NAME=travelsare
+    - PGPORT=5433
+    - DB_NAME=travelshare
     - DB_USER=postgres
     - DB_PASSWORD=postgres
     - PGDATA="/var/lib/postgresql/data"
@@ -20,7 +20,7 @@ env:
 before_script:
   # - addgroup -S postgres && adduser -S postgres -G postgres || true
   - sudo mkdir -p /var/lib/postgresql/data
-  - PGPASSWORD="" psql -c 'create database travelshare;' -U postgres -p 5433
+  - psql -c 'create database travelshare;'
   # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
