--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,11 @@ env:
     - PGPORT=5433
     - DB_NAME=travelshare
     - DB_USER=postgres
-    - DB_PASSWORD=postgres
-    - PGDATA="/var/lib/postgresql/data"
 
 before_script:
   # - addgroup -S postgres && adduser -S postgres -G postgres || true
   # - sudo mkdir -p /var/lib/postgresql/data
-  - psql -c 'create database travelshare;'
+  - psql -c 'create database travis_ci_test;' -U postgres
   # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
