--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,12 @@ addons:
 env:
   global:
     - PGPORT=5433
-    - DB_NAME=travelshare
     - DB_USER=postgres
 
 before_script:
   # - addgroup -S postgres && adduser -S postgres -G postgres || true
   # - sudo mkdir -p /var/lib/postgresql/data
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database travelshare;'
   # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
   - npm install
