--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
 before_script:
   # - addgroup -S postgres && adduser -S postgres -G postgres || true
   # - sudo mkdir -p /var/lib/postgresql/data
+  - psql -c "ALTER USER postgres WITH ENCRYPTED PASSWORD 'postgres';"
   - psql -c 'create database travelshare;'
   # - sudo chown -R postgres:postgres /var/lib/postgresql/data
 install:
