--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": null,
+    "password": "postgres",
     "database": "travelshare",
     "host": "localhost",
     "port": 5433,
@@ -10,7 +10,7 @@
   },
   "test": {
     "username": "postgres",
-    "password": null,
+    "password": "postgres",
     "database": "travelshare",
     "port": 5433,
     "host": "localhost",
