--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^29.3.1",
+    "jest": "29.2",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.1"
   },
