--- a/config/config.json
+++ b/config/config.json
@@ -12,6 +12,7 @@
     "password": "postgres",
     "database": "travelshare",
     "host": "localhost",
+    "port": 5433,
     "dialect": "postgres"
   },
   "production": {
