--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "postgres",
     "password": "postgres",
     "database": "travelshare",
-    "host": "localhost:5432",
+    "host": "127.0.0.1:5432",
     "dialect": "postgres",
     "logging": false
   },
@@ -11,7 +11,7 @@
     "username": "postgres",
     "password": "postgres",
     "database": "travelshare",
-    "host": "localhost:5433",
+    "host": "127.0.0.1:5433",
     "dialect": "postgres"
   },
   "production": {
