--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
     "password": "postgres",
     "database": "travelshare",
     "host": "127.0.0.1",
+    "port": 5432,
     "dialect": "postgres",
     "logging": false
   },
