--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "postgres",
     "password": "postgres",
     "database": "travelshare",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres",
     "logging": false
   },
@@ -11,7 +11,15 @@
     "username": "postgres",
     "password": "postgres",
     "database": "travelshare",
-    "host": "127.0.0.1",
+    "host": "localhost",
+    "dialect": "postgres"
+  },
+  "travis": {
+    "username": "postgres",
+    "password": "postgres",
+    "database": "travelshare",
+    "host": "localhost",
+    "port": 5433,
     "dialect": "postgres"
   },
   "production": {
