--- a/.github/workflows/docker_update.yaml
+++ b/.github/workflows/docker_update.yaml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   issues:
-    types: [closed, edited, milestoned]
+    types: [closed]
 
 jobs:
   build:
@@ -21,4 +21,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelshare:latest
