--- a/.github/workflows/docker_update.yaml
+++ b/.github/workflows/docker_update.yaml
@@ -21,4 +21,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelshare:latest
