--- a/.github/workflows/docker_update.yaml
+++ b/.github/workflows/docker_update.yaml
@@ -19,4 +19,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelshare:latest
+          tags: rccarmenaty/travelshare:latest
