--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "npx nodemon index.js",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
-    "test": "pg_ctl start && npm run migrate && jest --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test npx sequelize-cli db:migrate && jest",
+    "docker_test": "pg_ctl start && cross-env NODE_ENV=test npx sequelize-cli db:migrate && jest",
+    "travis": "cross-env NODE_ENV=travis npx sequelize-cli db:migrate && jest",
     "deletetdevdb": "npx sequelize-cli db:drop",
     "createdevdb": "npx sequelize-cli db:create",
     "deletetestdb": "npx sequelize-cli db:drop",
@@ -30,7 +32,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^29.3.1",
+    "jest": "29.2",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.1"
   },
