--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
   "travis": {
     "username": "postgres",
     "password": "travis",
-    "database": "travis",
+    "database": "travelshare",
     "host": "localhost",
     "port": 5433,
     "dialect": "postgres"
