--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "morgan": "~1.9.1",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
+    "pino-http": "^8.3.1",
+    "pino-pretty": "^9.1.1",
     "sequelize": "^6.6.2",
     "uuid": "^9.0.0"
   },
