--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npm run migrate",
     "test": "cross-env NODE_ENV=test npm run reset && jest -i --detectOpenHandles",
     "docker_test": "pg_ctl start && cross-env NODE_ENV=test npx sequelize-cli db:migrate && jest--detectOpenHandles",
-    "travis": "cross-env NODE_ENV=travis npx sequelize-cli db:migrate && jest",
-    "github": "cross-env NODE_ENV=github npx sequelize-cli db:migrate && jest",
+    "travis": "npx sequelize-cli db:migrate && jest",
+    "github": "npx sequelize-cli db:migrate && jest",
     "deletetdevdb": "npx sequelize-cli db:drop",
     "createdevdb": "npx sequelize-cli db:create",
     "deletetestdb": "npx sequelize-cli db:drop",
