--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run reset && jest -i --detectOpenHandles",
     "docker_test": "pg_ctl start && cross-env NODE_ENV=test npx sequelize-cli db:migrate && jest--detectOpenHandles",
     "travis": "npx sequelize-cli db:migrate && jest",
-    "github": "npx sequelize-cli db:migrate && jest",
+    "github": "cross-env NODE_ENV=github npx sequelize-cli db:migrate && jest",
     "deletetdevdb": "npx sequelize-cli db:drop",
     "createdevdb": "npx sequelize-cli db:create",
     "deletetestdb": "npx sequelize-cli db:drop",
