--- a/.github/workflows/docker_test.yaml
+++ b/.github/workflows/docker_test.yaml
@@ -1,40 +1,40 @@
-name: Running Tests
+# name: Running Tests
 
-on: [push]
+# on: [push]
 
-jobs:
-  Test:
-    runs-on: ubuntu-latest
+# jobs:
+#   Test:
+#     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres
+#     services:
+#       postgres:
+#         image: postgres
 
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: travelshare
+#         env:
+#           POSTGRES_PASSWORD: postgres
+#           POSTGRES_USER: postgres
+#           POSTGRES_DB: travelshare
 
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
+#         options: >-
+#           --health-cmd pg_isready
+#           --health-interval 10s
+#           --health-timeout 5s
+#           --health-retries 5
+#         ports:
+#           - 5432:5432
 
-    steps:
-      # run steps required in the workflow
-      - name: Checkout repository
-        uses: actions/checkout@v2
+#     steps:
+#       # run steps required in the workflow
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
 
-      - name: Set up Node.js 14.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
+#       - name: Set up Node.js 14.x
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: 14.x
 
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
 
-      - name: Test
-        run: npm run github
+#       - name: Test
+#         run: npm run github
