--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npx nodemon index.js",
     "migrate": "npx sequelize-cli db:migrate",
     "reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npm run migrate",
-    "test": "npm run reset && jest -i --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test npm run reset && jest -i --detectOpenHandles",
     "docker_test": "pg_ctl start && cross-env NODE_ENV=test npx sequelize-cli db:migrate && jest--detectOpenHandles",
     "travis": "npx sequelize-cli db:migrate && jest",
     "github": "cross-env NODE_ENV=github npx sequelize-cli db:migrate && jest",
